# atmus

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: help.html  search-index.js  settings.html  source-files.js
doc/docs/: all.html  index.html  sidebar-items.js
doc/docs/atmosphere/: fn.get_pressure.html  fn.get_temperature.html  fn.pressure.html  index.html  sidebar-items.js
doc/docs/atmus/: fn.atmus.html  index.html  sidebar-items.js
doc/src/docs/: lib.rs.html
doc/src/docs/atmosphere/: constants.rs.html  mod.rs.html
doc/src/docs/atmus/: constants.rs.html  mod.rs.html
src/: lib.rs
src/atmosphere/: constants.rs  mod.rs
src/atmus/: constants.rs  mod.rs
